--- a/cemento-ass/package.json
+++ b/cemento-ass/package.json
@@ -11,6 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^9.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
