--- a/cemento-ass/package.json
+++ b/cemento-ass/package.json
@@ -26,6 +26,7 @@
     "@eslint/js": "^9.25.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.4.1",
